--- a/style.css
+++ b/style.css
@@ -66,3 +66,21 @@ footer {
     height: 50px;
     background-color: #aaaaaa;
 }
+
+@media screen and (max-width: 425px) {
+  main {
+    display: block;
+    width: 90%;
+    margin : 50px 5%;
+  }
+  
+  .content {
+    width: 100%;
+    margin: 0 0 20px 0;
+  }
+  
+  .content:last-child {
+    margin-bottom: 0;
+  }
+  
+}
